@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.27 2012/09/21 04:07:22 taca Exp $
+# $NetBSD: Makefile,v 1.28 2012/10/06 14:11:09 asau Exp $
 
-DISTNAME=	optipng-0.7.3
+DISTNAME=	optipng-0.7.4
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=optipng/}
 
